<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_titleBuy"
        android:gravity="center"
        android:text="@string/Buy_full_ver"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Open_market"
        android:id="@+id/button_openMarket"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Open_browser"
        android:id="@+id/button_openBrowser"
        android:layout_gravity="center" />

</LinearLayout>