<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:id="@+id/menu_levels_tablelayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2">
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Levels"
            android:textSize="28sp"
            android:layout_column="0"
            android:layout_span="5"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/menu_levels_category_title"
            android:textSize="28sp"
            android:layout_column="0"
            android:layout_span="5"
            android:gravity="center"
            android:textColor="#ffffff" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="MenuLevelsTextView"
            android:layout_column="1"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="2"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="3"
            android:text="@string/Level"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:background="@drawable/prev" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_margin="10dp"
            android:background="@drawable/next" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="MenuLevelsTextView"
            android:layout_column="0"
            android:text="@string/Prev"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="1"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="2"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="3"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="4"
            android:text="@string/Next"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_column="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_column="2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_column="3" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="MenuLevelsTextView"
            android:layout_column="1"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="2"
            android:text="@string/Level"
            android:gravity="center" />
        <TextView
            style="MenuLevelsTextView"
            android:layout_column="3"
            android:text="@string/Level"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">
    </TableRow>

</TableLayout>